# mathlib

./: CMakeLists.txt
include/: basic.h  business.h  conversions.h  mathlib.h
mathlib/: CMakeLists.txt  mathlib.cpp  mathlib.h
src/: CMakeLists.txt  basic.c  business.c  conversions.c  main.c
test/: test_main.cpp
test/tests/: basic.h  business.h
